right: fix missing colors for search items section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -778,6 +778,14 @@
         }
         /// Read/Delivered section.
         ._2WP9Q { border: none }
+        /// Search -> Items.
+        [style] > div > ._2UaNq:hover {
+            c: 0 0 hl;
+            box-shadow: inset 0 1px bd;
+        }
+        /// Search -> Msg content/date.
+        span[title] > span[dir] { c: fg }
+        ._0LqQ { c: cm }
     }
 
     // Main -> Chat.
